# toli

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
Formula/: toli.rb
completions/: toli.bash  toli.fish  toli.zsh
scripts/: prepare_release.sh
src/: config.rs  llm.rs  main.rs  ollama.rs  openai.rs
