[package]
name = "toli"
version = "0.1.0"
edition = "2021"
description = "A natural language interface for shell commands"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dotenv = "0.15"
toml = "0.8"
shell-words = "1.1"
dirs = "5.0"